update openapi documentation and add account by username route
